python/compiler/generated/PyXACCIRParser.cpp

// Generated from PyXACCIR.g4 by ANTLR 4.7.2


#include "PyXACCIRListener.h"

#include "PyXACCIRParser.h"


using namespace antlrcpp;
using namespace pyxacc;
using namespace antlr4;

PyXACCIRParser::PyXACCIRParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

PyXACCIRParser::~PyXACCIRParser() {
  delete _interpreter;
}

std::string PyXACCIRParser::getGrammarFileName() const {
  return "PyXACCIR.g4";
}

const std::vector<std::string>& PyXACCIRParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& PyXACCIRParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- XaccsrcContext ------------------------------------------------------------------

PyXACCIRParser::XaccsrcContext::XaccsrcContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<PyXACCIRParser::XacckernelContext *> PyXACCIRParser::XaccsrcContext::xacckernel() {
  return getRuleContexts<PyXACCIRParser::XacckernelContext>();
}

PyXACCIRParser::XacckernelContext* PyXACCIRParser::XaccsrcContext::xacckernel(size_t i) {
  return getRuleContext<PyXACCIRParser::XacckernelContext>(i);
}


size_t PyXACCIRParser::XaccsrcContext::getRuleIndex() const {
  return PyXACCIRParser::RuleXaccsrc;
}

void PyXACCIRParser::XaccsrcContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PyXACCIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterXaccsrc(this);
}

void PyXACCIRParser::XaccsrcContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PyXACCIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitXaccsrc(this);
}

PyXACCIRParser::XaccsrcContext* PyXACCIRParser::xaccsrc() {
  XaccsrcContext *_localctx = _tracker.createInstance<XaccsrcContext>(_ctx, getState());
  enterRule(_localctx, 0, PyXACCIRParser::RuleXaccsrc);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(43);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == PyXACCIRParser::T__0) {
      setState(40);
      xacckernel();
      setState(45);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- XacckernelContext ------------------------------------------------------------------

PyXACCIRParser::XacckernelContext::XacckernelContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PyXACCIRParser::MainprogContext* PyXACCIRParser::XacckernelContext::mainprog() {
  return getRuleContext<PyXACCIRParser::MainprogContext>(0);
}

PyXACCIRParser::IdContext* PyXACCIRParser::XacckernelContext::id() {
  return getRuleContext<PyXACCIRParser::IdContext>(0);
}

std::vector<PyXACCIRParser::ParamContext *> PyXACCIRParser::XacckernelContext::param() {
  return getRuleContexts<PyXACCIRParser::ParamContext>();
}

PyXACCIRParser::ParamContext* PyXACCIRParser::XacckernelContext::param(size_t i) {
  return getRuleContext<PyXACCIRParser::ParamContext>(i);
}


size_t PyXACCIRParser::XacckernelContext::getRuleIndex() const {
  return PyXACCIRParser::RuleXacckernel;
}

void PyXACCIRParser::XacckernelContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PyXACCIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterXacckernel(this);
}

void PyXACCIRParser::XacckernelContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PyXACCIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitXacckernel(this);
}

PyXACCIRParser::XacckernelContext* PyXACCIRParser::xacckernel() {
  XacckernelContext *_localctx = _tracker.createInstance<XacckernelContext>(_ctx, getState());
  enterRule(_localctx, 2, PyXACCIRParser::RuleXacckernel);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(46);
    match(PyXACCIRParser::T__0);
    setState(47);
    dynamic_cast<XacckernelContext *>(_localctx)->kernelname = id();
    setState(48);
    match(PyXACCIRParser::T__1);
    setState(55);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << PyXACCIRParser::T__2)
      | (1ULL << PyXACCIRParser::T__6)
      | (1ULL << PyXACCIRParser::ID))) != 0)) {
      setState(50);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == PyXACCIRParser::T__2) {
        setState(49);
        match(PyXACCIRParser::T__2);
      }
      setState(52);
      param();
      setState(57);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(58);
    match(PyXACCIRParser::T__3);
    setState(59);
    match(PyXACCIRParser::T__4);
    setState(60);
    mainprog();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MainprogContext ------------------------------------------------------------------

PyXACCIRParser::MainprogContext::MainprogContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PyXACCIRParser::ProgramContext* PyXACCIRParser::MainprogContext::program() {
  return getRuleContext<PyXACCIRParser::ProgramContext>(0);
}


size_t PyXACCIRParser::MainprogContext::getRuleIndex() const {
  return PyXACCIRParser::RuleMainprog;
}

void PyXACCIRParser::MainprogContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PyXACCIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMainprog(this);
}

void PyXACCIRParser::MainprogContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PyXACCIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMainprog(this);
}

PyXACCIRParser::MainprogContext* PyXACCIRParser::mainprog() {
  MainprogContext *_localctx = _tracker.createInstance<MainprogContext>(_ctx, getState());
  enterRule(_localctx, 4, PyXACCIRParser::RuleMainprog);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(62);
    program();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgramContext ------------------------------------------------------------------

PyXACCIRParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<PyXACCIRParser::LineContext *> PyXACCIRParser::ProgramContext::line() {
  return getRuleContexts<PyXACCIRParser::LineContext>();
}

PyXACCIRParser::LineContext* PyXACCIRParser::ProgramContext::line(size_t i) {
  return getRuleContext<PyXACCIRParser::LineContext>(i);
}


size_t PyXACCIRParser::ProgramContext::getRuleIndex() const {
  return PyXACCIRParser::RuleProgram;
}

void PyXACCIRParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PyXACCIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void PyXACCIRParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PyXACCIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}

PyXACCIRParser::ProgramContext* PyXACCIRParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 6, PyXACCIRParser::RuleProgram);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(65); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(64);
      line();
      setState(67); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << PyXACCIRParser::T__5)
      | (1ULL << PyXACCIRParser::COMMENT)
      | (1ULL << PyXACCIRParser::ID))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LineContext ------------------------------------------------------------------

PyXACCIRParser::LineContext::LineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<PyXACCIRParser::StatementContext *> PyXACCIRParser::LineContext::statement() {
  return getRuleContexts<PyXACCIRParser::StatementContext>();
}

PyXACCIRParser::StatementContext* PyXACCIRParser::LineContext::statement(size_t i) {
  return getRuleContext<PyXACCIRParser::StatementContext>(i);
}

PyXACCIRParser::CommentContext* PyXACCIRParser::LineContext::comment() {
  return getRuleContext<PyXACCIRParser::CommentContext>(0);
}


size_t PyXACCIRParser::LineContext::getRuleIndex() const {
  return PyXACCIRParser::RuleLine;
}

void PyXACCIRParser::LineContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PyXACCIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLine(this);
}

void PyXACCIRParser::LineContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PyXACCIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLine(this);
}

PyXACCIRParser::LineContext* PyXACCIRParser::line() {
  LineContext *_localctx = _tracker.createInstance<LineContext>(_ctx, getState());
  enterRule(_localctx, 8, PyXACCIRParser::RuleLine);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    setState(75);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case PyXACCIRParser::T__5:
      case PyXACCIRParser::ID: {
        enterOuterAlt(_localctx, 1);
        setState(70); 
        _errHandler->sync(this);
        alt = 1;
        do {
          switch (alt) {
            case 1: {
                  setState(69);
                  statement();
                  break;
                }

          default:
            throw NoViableAltException(this);
          }
          setState(72); 
          _errHandler->sync(this);
          alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
        } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
        break;
      }

      case PyXACCIRParser::COMMENT: {
        enterOuterAlt(_localctx, 2);
        setState(74);
        comment();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

PyXACCIRParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PyXACCIRParser::UopContext* PyXACCIRParser::StatementContext::uop() {
  return getRuleContext<PyXACCIRParser::UopContext>(0);
}


size_t PyXACCIRParser::StatementContext::getRuleIndex() const {
  return PyXACCIRParser::RuleStatement;
}

void PyXACCIRParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PyXACCIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void PyXACCIRParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PyXACCIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}

PyXACCIRParser::StatementContext* PyXACCIRParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 10, PyXACCIRParser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(79);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case PyXACCIRParser::ID: {
        enterOuterAlt(_localctx, 1);
        setState(77);
        uop();
        break;
      }

      case PyXACCIRParser::T__5: {
        enterOuterAlt(_localctx, 2);
        setState(78);
        match(PyXACCIRParser::T__5);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CommentContext ------------------------------------------------------------------

PyXACCIRParser::CommentContext::CommentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PyXACCIRParser::CommentContext::COMMENT() {
  return getToken(PyXACCIRParser::COMMENT, 0);
}


size_t PyXACCIRParser::CommentContext::getRuleIndex() const {
  return PyXACCIRParser::RuleComment;
}

void PyXACCIRParser::CommentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PyXACCIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterComment(this);
}

void PyXACCIRParser::CommentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PyXACCIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitComment(this);
}

PyXACCIRParser::CommentContext* PyXACCIRParser::comment() {
  CommentContext *_localctx = _tracker.createInstance<CommentContext>(_ctx, getState());
  enterRule(_localctx, 12, PyXACCIRParser::RuleComment);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(81);
    match(PyXACCIRParser::COMMENT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamlistContext ------------------------------------------------------------------

PyXACCIRParser::ParamlistContext::ParamlistContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PyXACCIRParser::ParamContext* PyXACCIRParser::ParamlistContext::param() {
  return getRuleContext<PyXACCIRParser::ParamContext>(0);
}

PyXACCIRParser::ParamlistContext* PyXACCIRParser::ParamlistContext::paramlist() {
  return getRuleContext<PyXACCIRParser::ParamlistContext>(0);
}


size_t PyXACCIRParser::ParamlistContext::getRuleIndex() const {
  return PyXACCIRParser::RuleParamlist;
}

void PyXACCIRParser::ParamlistContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PyXACCIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParamlist(this);
}

void PyXACCIRParser::ParamlistContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PyXACCIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParamlist(this);
}

PyXACCIRParser::ParamlistContext* PyXACCIRParser::paramlist() {
  ParamlistContext *_localctx = _tracker.createInstance<ParamlistContext>(_ctx, getState());
  enterRule(_localctx, 14, PyXACCIRParser::RuleParamlist);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(83);
    param();
    setState(86);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      setState(84);
      match(PyXACCIRParser::T__2);
      setState(85);
      paramlist();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamContext ------------------------------------------------------------------

PyXACCIRParser::ParamContext::ParamContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PyXACCIRParser::IdContext* PyXACCIRParser::ParamContext::id() {
  return getRuleContext<PyXACCIRParser::IdContext>(0);
}


size_t PyXACCIRParser::ParamContext::getRuleIndex() const {
  return PyXACCIRParser::RuleParam;
}

void PyXACCIRParser::ParamContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PyXACCIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParam(this);
}

void PyXACCIRParser::ParamContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PyXACCIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParam(this);
}

PyXACCIRParser::ParamContext* PyXACCIRParser::param() {
  ParamContext *_localctx = _tracker.createInstance<ParamContext>(_ctx, getState());
  enterRule(_localctx, 16, PyXACCIRParser::RuleParam);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(91);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case PyXACCIRParser::ID: {
        enterOuterAlt(_localctx, 1);
        setState(88);
        id();
        break;
      }

      case PyXACCIRParser::T__6: {
        enterOuterAlt(_localctx, 2);
        setState(89);
        match(PyXACCIRParser::T__6);
        setState(90);
        id();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UopContext ------------------------------------------------------------------

PyXACCIRParser::UopContext::UopContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PyXACCIRParser::GateContext* PyXACCIRParser::UopContext::gate() {
  return getRuleContext<PyXACCIRParser::GateContext>(0);
}

PyXACCIRParser::ExplistContext* PyXACCIRParser::UopContext::explist() {
  return getRuleContext<PyXACCIRParser::ExplistContext>(0);
}

PyXACCIRParser::AllbitsOpContext* PyXACCIRParser::UopContext::allbitsOp() {
  return getRuleContext<PyXACCIRParser::AllbitsOpContext>(0);
}


size_t PyXACCIRParser::UopContext::getRuleIndex() const {
  return PyXACCIRParser::RuleUop;
}

void PyXACCIRParser::UopContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PyXACCIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUop(this);
}

void PyXACCIRParser::UopContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PyXACCIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUop(this);
}

PyXACCIRParser::UopContext* PyXACCIRParser::uop() {
  UopContext *_localctx = _tracker.createInstance<UopContext>(_ctx, getState());
  enterRule(_localctx, 18, PyXACCIRParser::RuleUop);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(99);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(93);
      dynamic_cast<UopContext *>(_localctx)->gatename = gate();
      setState(94);
      match(PyXACCIRParser::T__1);

      setState(95);
      explist();
      setState(96);
      match(PyXACCIRParser::T__3);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(98);
      allbitsOp();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AllbitsOpContext ------------------------------------------------------------------

PyXACCIRParser::AllbitsOpContext::AllbitsOpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PyXACCIRParser::GateContext* PyXACCIRParser::AllbitsOpContext::gate() {
  return getRuleContext<PyXACCIRParser::GateContext>(0);
}

std::vector<tree::TerminalNode *> PyXACCIRParser::AllbitsOpContext::INT() {
  return getTokens(PyXACCIRParser::INT);
}

tree::TerminalNode* PyXACCIRParser::AllbitsOpContext::INT(size_t i) {
  return getToken(PyXACCIRParser::INT, i);
}


size_t PyXACCIRParser::AllbitsOpContext::getRuleIndex() const {
  return PyXACCIRParser::RuleAllbitsOp;
}

void PyXACCIRParser::AllbitsOpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PyXACCIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAllbitsOp(this);
}

void PyXACCIRParser::AllbitsOpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PyXACCIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAllbitsOp(this);
}

PyXACCIRParser::AllbitsOpContext* PyXACCIRParser::allbitsOp() {
  AllbitsOpContext *_localctx = _tracker.createInstance<AllbitsOpContext>(_ctx, getState());
  enterRule(_localctx, 20, PyXACCIRParser::RuleAllbitsOp);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(113);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(101);
      dynamic_cast<AllbitsOpContext *>(_localctx)->gatename = gate();
      setState(102);
      match(PyXACCIRParser::T__1);
      setState(103);
      match(PyXACCIRParser::T__7);
      setState(104);
      match(PyXACCIRParser::T__3);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(106);
      dynamic_cast<AllbitsOpContext *>(_localctx)->gatename = gate();
      setState(107);
      match(PyXACCIRParser::T__1);
      setState(108);
      match(PyXACCIRParser::INT);
      setState(109);
      match(PyXACCIRParser::T__8);
      setState(110);
      match(PyXACCIRParser::INT);
      setState(111);
      match(PyXACCIRParser::T__3);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GateContext ------------------------------------------------------------------

PyXACCIRParser::GateContext::GateContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PyXACCIRParser::IdContext* PyXACCIRParser::GateContext::id() {
  return getRuleContext<PyXACCIRParser::IdContext>(0);
}


size_t PyXACCIRParser::GateContext::getRuleIndex() const {
  return PyXACCIRParser::RuleGate;
}

void PyXACCIRParser::GateContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PyXACCIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGate(this);
}

void PyXACCIRParser::GateContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PyXACCIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGate(this);
}

PyXACCIRParser::GateContext* PyXACCIRParser::gate() {
  GateContext *_localctx = _tracker.createInstance<GateContext>(_ctx, getState());
  enterRule(_localctx, 22, PyXACCIRParser::RuleGate);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(115);
    id();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExplistContext ------------------------------------------------------------------

PyXACCIRParser::ExplistContext::ExplistContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<PyXACCIRParser::ExpContext *> PyXACCIRParser::ExplistContext::exp() {
  return getRuleContexts<PyXACCIRParser::ExpContext>();
}

PyXACCIRParser::ExpContext* PyXACCIRParser::ExplistContext::exp(size_t i) {
  return getRuleContext<PyXACCIRParser::ExpContext>(i);
}


size_t PyXACCIRParser::ExplistContext::getRuleIndex() const {
  return PyXACCIRParser::RuleExplist;
}

void PyXACCIRParser::ExplistContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PyXACCIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExplist(this);
}

void PyXACCIRParser::ExplistContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PyXACCIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExplist(this);
}

PyXACCIRParser::ExplistContext* PyXACCIRParser::explist() {
  ExplistContext *_localctx = _tracker.createInstance<ExplistContext>(_ctx, getState());
  enterRule(_localctx, 24, PyXACCIRParser::RuleExplist);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(117);
    exp(0);
    setState(122);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == PyXACCIRParser::T__2) {
      setState(118);
      match(PyXACCIRParser::T__2);
      setState(119);
      exp(0);
      setState(124);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpContext ------------------------------------------------------------------

PyXACCIRParser::ExpContext::ExpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PyXACCIRParser::RealContext* PyXACCIRParser::ExpContext::real() {
  return getRuleContext<PyXACCIRParser::RealContext>(0);
}

tree::TerminalNode* PyXACCIRParser::ExpContext::INT() {
  return getToken(PyXACCIRParser::INT, 0);
}

PyXACCIRParser::IdContext* PyXACCIRParser::ExpContext::id() {
  return getRuleContext<PyXACCIRParser::IdContext>(0);
}

std::vector<PyXACCIRParser::ExpContext *> PyXACCIRParser::ExpContext::exp() {
  return getRuleContexts<PyXACCIRParser::ExpContext>();
}

PyXACCIRParser::ExpContext* PyXACCIRParser::ExpContext::exp(size_t i) {
  return getRuleContext<PyXACCIRParser::ExpContext>(i);
}

PyXACCIRParser::UnaryopContext* PyXACCIRParser::ExpContext::unaryop() {
  return getRuleContext<PyXACCIRParser::UnaryopContext>(0);
}

PyXACCIRParser::KeyContext* PyXACCIRParser::ExpContext::key() {
  return getRuleContext<PyXACCIRParser::KeyContext>(0);
}

std::vector<PyXACCIRParser::CouplerContext *> PyXACCIRParser::ExpContext::coupler() {
  return getRuleContexts<PyXACCIRParser::CouplerContext>();
}

PyXACCIRParser::CouplerContext* PyXACCIRParser::ExpContext::coupler(size_t i) {
  return getRuleContext<PyXACCIRParser::CouplerContext>(i);
}


size_t PyXACCIRParser::ExpContext::getRuleIndex() const {
  return PyXACCIRParser::RuleExp;
}

void PyXACCIRParser::ExpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PyXACCIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExp(this);
}

void PyXACCIRParser::ExpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PyXACCIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExp(this);
}


PyXACCIRParser::ExpContext* PyXACCIRParser::exp() {
   return exp(0);
}
